# rag-from-scratch

./: .env.sample  .gitignore  README.md  augmentation.py  chunk.py  embeddings.py  example-prompt-after-augmentation.txt  generation.py  pyproject.toml  rag.py  retrieval.py
.devcontainer/: Dockerfile  devcontainer.json
handbook/ceo/: _index.md
handbook/company/culture/all-remote/: stories.md
handbook/leadership/: high-output-management.md  in-person.md
